--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <link href='./style.css' rel='stylesheet' type='text/css'>
   <title>PDF conversor</title>
 </head>
@@ -20,7 +21,7 @@
     <div class="input-block">
       <label>Arquivo a ser convertido:</label>
       <input type='file' id="file">
-      <button type='submit' onclick="teste()"> Convert </button>
+      <button type='submit' onclick="sendImg()"> Convert </button>
     </div>
 
   </main>
