feat: Download PDF file converted

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -25,6 +25,8 @@
       <button type='submit' onclick="sendImg()"> Convert </button>
     </div>
 
+    <a href="" id="download"></a>
+
   </main>
   <script src='./main.js'></script>
 </body>
